--- a/HTML-index.html
+++ b/HTML-index.html
@@ -60,10 +60,11 @@
 					<img src="assets/images/bgpic2.jpg">
     			<div class="overlay-wrap section-head">
 	 	   			<h1>Suraj Bansal</h1>
-
 				</div>
  	   		</div>
-    	</section>	
+			<!-- particles.js container --> 
+    		<div id="particles-js"></div>
+		</section>	
     	<!-- END: HOME -->
 
 		<!-- START: ABOUT -->
@@ -89,7 +90,7 @@
 					</div>
 
 					<div class="col-md-5 d-none d-md-block">
-						<img class="img-fluid img-thumbnail" src="assets/images/aboutme.jpg" alt="About Me Picture">
+						<img class="img-fluid img-thumbnail" src="assets/images/smile.jpg" alt="About Me Picture">
 					</div>
 				</div>
 			</div>
@@ -152,20 +153,20 @@
 			<div class="container">
 				<div class="section-head text-center">
 					<span>Portfolio</span>
-					<h2>My Works</h2>
+					<h2>My Work and Projects</h2>
 				</div>
 			</div>
 			<div class="container swiper-container swiper-portfolio wow fadeInUp" data-wow-duration="1.5s">
 				<div class=" swiper-wrapper">
 					<div class="portfolio-item swiper-slide " data-groups="all slideshow">
-						<a href="assets/images/p1-1.jpg" class="portfolio-item--content simple-ajax-popup">
+						<a href="assets/images/_______jpg" class="portfolio-item--content simple-ajax-popup">
 							<div class="portfolio-item--img b-box">
-								<img src="assets/images/p1-1.jpg" class="img-fluid mx-auto" alt="work-img">
+								<img src="assets/images/______jpg" class="img-fluid mx-auto" alt="work-img">
 							</div>
 							<div class="portfolio-item--desc d-flex justify-content-center align-items-center">
 								<div class="portfolio-item--desc-in">
-									<h3 class="mb-2 text-white">The wall</h3>
-									<p class="text-white">Slideshow</p>
+									<h3 class="mb-2 text-white">FILLER TEXT</h3>
+									<p class="text-white">FILLER TEXT</p>
 								</div>
 							</div>
 						</a>
@@ -292,7 +293,7 @@
 		<!--END: WORK -->
 
 		<!-- START: CTA -->
-		<section class="section  section-freelance section-light text-center" style="background-image:url(assets/images/bgpic2.jpg)">
+		<section class="section  section-freelance section-light text-center" style="background-image:url(assets/images/microphone.jpg)">
 			<div class="container">
 				<div class="row">
 					<div class="col-lg-12">
@@ -300,7 +301,7 @@
 							<h2>Let's work together!</h2>
 						</div>
 						<div class="mt-5 wow fadeInUp" data-wow-duration="1.5s" data-wow-delay=".2s">
-							<a href="assets/resume/SurajResume.pdf" class="btn btn-outline hover-state">MY RESUME</a>
+							<a href="assets/resume/SurajResume.pdf" target="_blank" class="btn btn-outline hover-state">MY RESUME</a>
 						</div>
 					</div>
 				</div>
@@ -318,7 +319,7 @@
 				<div class="mt-5">
 					<div class="swiper-container swiper-blog">
 						<div class="swiper-wrapper">
-							<a href="https://youtu.be/PpDxrAVjENg" class="swiper-slide blog-list b-box hover-state d-block mb-4">
+							<a href="https://youtu.be/PpDxrAVjENg" target="_blank" class="swiper-slide blog-list b-box hover-state d-block mb-4">
 								<div class="blog-list--img wow fadeIn" data-wow-duration="1.5s">
 									<img src="assets/images/polypdetection.jpg" alt="Blog Image" class="img-fluid">
 									<div class="blog-list--details d-flex justify-content-center align-items-center">
@@ -348,7 +349,7 @@
 									<span class="d-block text-center mt-3 font-weight-bold blog-cat">Genomics</span>
 								</div>
 							</a>
-							<a href="https://medium.com/datadriveninvestor/the-math-and-intuition-behind-gradient-descent-13c45f367a11" class="swiper-slide blog-list b-box hover-state d-block mb-4">
+							<a href="https://medium.com/datadriveninvestor/the-math-and-intuition-behind-gradient-descent-13c45f367a11" target="_blank" class="swiper-slide blog-list b-box hover-state d-block mb-4">
 								<div class="blog-list--img wow fadeIn" data-wow-duration="1.5s" data-wow-delay=".3s">
 									<img src="assets/images/gradientdescent.jpg" alt="Blog Image" class="img-fluid">
 									<div class="blog-list--details d-flex justify-content-center align-items-center">
@@ -362,7 +363,7 @@
 									<p>Gradient Descent- Exploring the Math and Intuition </p>
 									<span class="d-block text-center mt-3 font-weight-bold blog-cat">Artificial Intelligence</span>
 								</div>
-								<a href="https://medium.com/datadriveninvestor/rl-explained-reinforcing-the-intuition-and-math-fd1185369186" class="swiper-slide blog-list b-box hover-state d-block mb-4">
+								<a href="https://medium.com/datadriveninvestor/rl-explained-reinforcing-the-intuition-and-math-fd1185369186" target="_blank" class="swiper-slide blog-list b-box hover-state d-block mb-4">
 									<div class="blog-list--img wow fadeIn" data-wow-duration="1.5s" data-wow-delay=".4s">
 										<img src="assets/images/RLexplained.jpg" alt="Blog Image" class="img-fluid">
 										<div class="blog-list--details d-flex justify-content-center align-items-center">
@@ -377,7 +378,7 @@
 										<span class="d-block text-center mt-3 font-weight-bold blog-cat">Artificial Intelligence</span>
 									</div>
 								</a>
-								<a href="https://medium.com/datadriveninvestor/revolutionizing-polypectomies-with-convolutional-neural-networks-76d686ce995a" class="swiper-slide blog-list b-box hover-state d-block mb-4">
+								<a href="https://medium.com/datadriveninvestor/revolutionizing-polypectomies-with-convolutional-neural-networks-76d686ce995a" target="_blank" class="swiper-slide blog-list b-box hover-state d-block mb-4">
 									<div class="blog-list--img wow fadeIn" data-wow-duration="1.5s" data-wow-delay=".4s">
 										<img src="assets/images/polypscnn.jpg" alt="Blog Image" class="img-fluid">
 										<div class="blog-list--details d-flex justify-content-center align-items-center">
@@ -393,7 +394,7 @@
 									</div>
 							</a>
 							</a>
-							<a href="https://medium.com/datadriveninvestor/convolutional-neural-networks-explained-7fafea4de9c9" class="swiper-slide blog-list b-box hover-state d-block mb-4">
+							<a href="https://medium.com/datadriveninvestor/convolutional-neural-networks-explained-7fafea4de9c9" target="_blank"  class="swiper-slide blog-list b-box hover-state d-block mb-4">
 								<div class="blog-list--img wow fadeIn" data-wow-duration="1.5s" data-wow-delay=".4s">
 									<img src="assets/images/cnnsexplained.jpg" alt="Blog Image" class="img-fluid">
 									<div class="blog-list--details d-flex justify-content-center align-items-center">
@@ -408,7 +409,7 @@
 									<span class="d-block text-center mt-3 font-weight-bold blog-cat">Artificial Intelligence</span>
 								</div>
 							</a>
-							<a href="https://www.youtube.com/watch?v=yvouUpxIqts" class="swiper-slide blog-list b-box hover-state d-block mb-4">
+							<a href="https://www.youtube.com/watch?v=yvouUpxIqts" target="_blank" class="swiper-slide blog-list b-box hover-state d-block mb-4">
 								<div class="blog-list--img wow fadeIn" data-wow-duration="1.5s" data-wow-delay=".4s">
 									<img src="assets/images/mlintro.jpg" alt="Blog Image" class="img-fluid">
 									<div class="blog-list--details d-flex justify-content-center align-items-center">
@@ -423,7 +424,7 @@
 									<span class="d-block text-center mt-3 font-weight-bold blog-cat">Artificial Intelligence</span>
 								</div>
 							</a>
-							<a href="https://medium.com/datadriveninvestor/markov-decision-processes-learning-some-math-b82448169927" class="swiper-slide blog-list b-box hover-state d-block mb-4">
+							<a href="https://medium.com/datadriveninvestor/markov-decision-processes-learning-some-math-b82448169927" target="_blank" class="swiper-slide blog-list b-box hover-state d-block mb-4">
 								<div class="blog-list--img wow fadeIn" data-wow-duration="1.5s" data-wow-delay=".4s">
 									<img src="assets/images/markovs.png" alt="Blog Image" class="img-fluid">
 									<div class="blog-list--details d-flex justify-content-center align-items-center">
@@ -443,7 +444,7 @@
 						<div class="swiper-progressbar"></div>
 						
 						<div class="blog-viewmore text-center pb-5">
-							<a href="https://tks.life/profile/suraj.bansal" class="mt-5 btn hover-state">Show Some More!</a>
+							<a href="https://tks.life/profile/suraj.bansal" target="_blank" class="mt-5 btn hover-state">Show Some More!</a>
 						</div>
 					</div>
 				</div>
@@ -453,30 +454,38 @@
 
 		<!-- START: CONTACT -->
 		<section class="section section-dark section-contact" id="contact">
-			<div class="col-6">
-				<h4>Give me a summary —</h4>
-				<p>Hey there! My name is Suraj Bansal and I'm extremely passionate about machine learning and healthcare!
-				</p>
-
-				<p>My journey with artificial intelligence stemmed from my ambition to impact billions. I'm currently working with recurrent neural networks, reinforcement learning, and YOLO object detection to predict driver intent for autonomous vehicles! 
-				</p>
-
-				<p>I'm constantly looking for growth opportunities in software or full-stack development- reach out anytime!
-				</p>
-			</div>
-			<div class="col-3">
-				<h4>Show me more —</h4>
-				<a href="assets/resume/SurajResume.pdf" target="_blank">Resume</a>
-				<a href="https://www.linkedin.com/in/suraj-bansal/" target="_blank">LinkedIn</a>
-				<a href="https://tks.life/profile/suraj.bansal" target="_blank" >Portfolio</a>
-				<a href="https://github.com/Suraj-Bansal" target="_blank">Github</a>
-				<a href="https://medium.com/@bansalsuraj03" target="_blank">Medium</a>
-				<a href="https://www.youtube.com/channel/UCxDCH862Hve_R8O47qK2WbA?view_as=subscriber" target="_blank">Youtube</a>
-			</div>
-			<div class="col-3">
-				<h4>Contact me now —</h4>
-				<a href="mailto:bansalsuraj03@gmail.com">bansalsuraj03@gmail.com</a>
-				<a href="tel:6476688108">+1 647 668 8108</a>
+			<div class="fullwidth">
+				<div id="fixedFooter">
+					<div class="col-6">
+						<h3><strong>| Give me a summary</strong></h3>
+						<p>
+							Hey there! My name is Suraj Bansal and I'm extremely passionate about machine learning and healthcare!<br>
+						</P>
+						<p>
+							I'm currently working with recurrent neural networks, and YOLO object detection to predict driver intent for autonomous vehicles!<br>
+						</p>
+						<p>
+							I'm constantly looking for growth opportunities in software or full-stack development- reach out anytime!<br>
+						</p>
+					</div>
+					<div class="col-3">
+						<h3><strong>| Learn more</strong></h3>
+						<p>
+							<a href="assets/resume/SurajResume.pdf" target="_blank"><strong>Resume</strong></a> <br>
+							<a href="https://www.linkedin.com/in/suraj-bansal/" target="_blank"><strong>LinkedIn</strong></a> <br>
+							<a href="https://tks.life/profile/suraj.bansal" target="_blank"><strong>Portfolio</strong></a> <br>
+							<a href="https://github.com/Suraj-Bansal" target="_blank"><strong>Github</strong></a> <br>
+							<a href="https://medium.com/@bansalsuraj03" target="_blank"><strong>Medium</strong></a> <br>
+							<a href="https://www.youtube.com/channel/UCxDCH862Hve_R8O47qK2WbA?view_as=subscriber" target="_blank"><strong>Youtube</strong></a> <br>
+						</p>
+						
+					</div>
+					<div class="col-3">
+						<h3><strong>| Contact me now</strong></h3>
+						<a href="mailto:bansalsuraj03@gmail.com">bansalsuraj03@gmail.com</a> <br>
+						<a href="tel:6476688108">+1 647 668 8108</a> <br>
+					</div>
+				</div>
 			</div>
 		</section>
 		<!-- END: CONTACT -->
@@ -497,12 +506,10 @@
 	<script src="assets/js/smooth-scroll.js"></script>
 	
 	<!-- Particles js -->
-    <script src="assets/js/particles.min.js"></script>
+	<script src="assets/js/particles.min.js"></script> 
 	<script src="assets/js/particlesjs-config-2.js"></script>
-	particlesJS("particles-js", {"particles":{"number":{"value":80,"density":{"enable":true,"value_area":800}},"color":{"value":"#ffffff"},"shape":{"type":"circle","stroke":{"width":0,"color":"#000000"},"polygon":{"nb_sides":5},"image":{"src":"img/github.svg","width":100,"height":100}},"opacity":{"value":0.5,"random":false,"anim":{"enable":false,"speed":1,"opacity_min":0.1,"sync":false}},"size":{"value":3,"random":true,"anim":{"enable":false,"speed":40,"size_min":0.1,"sync":false}},"line_linked":{"enable":true,"distance":150,"color":"#ffffff","opacity":0.4,"width":1},"move":{"enable":true,"speed":6,"direction":"none","random":false,"straight":false,"out_mode":"out","bounce":false,"attract":{"enable":false,"rotateX":600,"rotateY":1200}}},"interactivity":{"detect_on":"canvas","events":{"onhover":{"enable":true,"mode":"repulse"},"onclick":{"enable":true,"mode":"push"},"resize":true},"modes":{"grab":{"distance":400,"line_linked":{"opacity":1}},"bubble":{"distance":400,"size":40,"duration":2,"opacity":8,"speed":3},"repulse":{"distance":200,"duration":0.4},"push":{"particles_nb":4},"remove":{"particles_nb":2}}},"retina_detect":true});
 
 	<!-- Custom Js -->
 	<script src="assets/js/custom.js"></script>
 </body>
 </html>
-
