--- a/OLDIGNORE.html
+++ b/OLDIGNORE.html
@@ -13,7 +13,7 @@
 	<link rel="stylesheet" href="assets/css/vendor.css" />	
 
 	<!-- JustinTemplate style Css -->
-	<link href="assets/css/justin.css" rel="stylesheet">
+	<link href="assets/css/suraj.css" rel="stylesheet">
 
 	<!-- Custom style Css -->
 	<link href="assets/css/custom.css" rel="stylesheet">
