--- a/HTML-index.html
+++ b/HTML-index.html
@@ -44,11 +44,11 @@
 
 				<div class="collapse navbar-collapse" id="navbarToggler">
 					<ul class="navbar-nav ml-auto">
-						<li><a class="nav-link active" href="#home">home</a></li>
+						<li><a class="nav-link active" href="#home">HOME</a></li>
 						<li><a class="nav-link" href="#resume">EXPERTISES</a></li>
-						<li><a class="nav-link" href="#work">Works</a></li>
-						<li><a class="nav-link" href="#blog">Blog</a></li>
-						<li><a class="nav-link" href="#contact">Contact</a></li>
+						<li><a class="nav-link" href="#projects">PROJECTS</a></li>
+						<li><a class="nav-link" href="#content">CONTENT</a></li>
+						<li><a class="nav-link" href="#contact">CONTACT</a></li>
 					</ul>
 				</div>
 			</div>
@@ -78,7 +78,7 @@
 						<div class="about-desc">
 							<div class="about-desc-content">
 								<h2>ABOUT <strong>SURAJ—</strong></h2>
-								<p class="mt-4 font-weight-light">Hey there! I'm your local 16 year old machine learning developer passionate about interdisciplinary approaches to innovation and healthcare. I'm enthusiastic about leveraging artificial intelligence to revolutionize global healthcare inefficiencies!</p>
+								<p class="mt-4 font-weight-light">Hey there! I'm 16 and super passionate about interdisciplinary approaches to machine learning and healthcare. I'm enthusiastic about leveraging artificial intelligence to revolutionize global healthcare inefficiencies!</p>
 							</div>
 							<ul class="about-desc-social mt-4 list-unstyled list-inline">
 		                        <li class="list-inline-item"><a href="https://github.com/Suraj-Bansal" target="_blank"><i class="fab fa-github"></i></a></li>
@@ -148,8 +148,8 @@
 		</section>
 		<!-- END: RESUME -->
 
-		<!--START: WORK -->   
-		<section class="section section-work" id="work">
+		<!--START: PROJECTS -->   
+		<section class="section section-work" id="projects">
 			<div class="container">
 				<div class="section-head text-center">
 					<span>Portfolio</span>
@@ -158,127 +158,41 @@
 			</div>
 			<div class="container swiper-container swiper-portfolio wow fadeInUp" data-wow-duration="1.5s">
 				<div class=" swiper-wrapper">
-					<div class="portfolio-item swiper-slide " data-groups="all slideshow">
-						<a href="assets/images/_______jpg" class="portfolio-item--content simple-ajax-popup">
-							<div class="portfolio-item--img b-box">
-								<img src="assets/images/______jpg" class="img-fluid mx-auto" alt="work-img">
-							</div>
-							<div class="portfolio-item--desc d-flex justify-content-center align-items-center">
-								<div class="portfolio-item--desc-in">
-									<h3 class="mb-2 text-white">FILLER TEXT</h3>
-									<p class="text-white">FILLER TEXT</p>
-								</div>
-							</div>
-						</a>
-					</div>
 
-					<div class="portfolio-item swiper-slide image" data-groups="all image">
-						<a href="assets/images/p2-2.jpg" class="portfolio-item--content simple-ajax-popup">
+					<div class="portfolio-item swiper-slide  slideshow" data-groups="all slideshow">
+						<a href="https://github.com/Suraj-Bansal/CIFAR10-Classification" target="_blank">
 							<div class="portfolio-item--img b-box">
-								<img src="assets/images/p2-2.jpg" class="img-fluid mx-auto" alt="work-img">
+								<img src="assets/images/cifar.jpg" class="img-fluid mx-auto" alt="work-img">
 							</div>
 							<div class="portfolio-item--desc d-flex justify-content-center align-items-center">
 								<div class="portfolio-item--desc-in">
-									<h3 class="mb-2 text-white">The wall</h3>
-									<p class="text-white">Slideshow</p>
-								</div>
-							</div>
-						</a>
-					</div>
-
-					<div class="portfolio-item swiper-slide slideshow" data-groups="all slideshow">
-						<a href="assets/images/p3-3.jpg" class="portfolio-item--content simple-ajax-popup">
-							<div class="portfolio-item--img b-box">
-								<img src="assets/images/p3-3.jpg" class="img-fluid mx-auto" alt="work-img">
-							</div>
-							<div class="portfolio-item--desc d-flex justify-content-center align-items-center">
-								<div class="portfolio-item--desc-in">
-									<h3 class="mb-2 text-white">The wall</h3>
-									<p class="text-white">Slideshow</p>
-								</div>
-							</div>
-						</a>
-					</div>
-
-					<div class="portfolio-item swiper-slide video" data-groups="all video">
-						<a href="assets/images/p4-4.jpg" class="portfolio-item--content simple-ajax-popup">
-							<div class="portfolio-item--img b-box">
-								<img src="assets/images/p4-4.jpg" class="img-fluid mx-auto" alt="work-img">
-							</div>
-							<div class="portfolio-item--desc d-flex justify-content-center align-items-center">
-								<div class="portfolio-item--desc-in">
-									<h3 class="mb-2 text-white">The wall</h3>
-									<p class="text-white">Slideshow</p>
+									<h3 class="mb-2 text-white">CIFAR10 CLASSIFICATION</h3>
 								</div>
 							</div>
 						</a>
 					</div>
 
 					<div class="portfolio-item swiper-slide  slideshow" data-groups="all slideshow">
-						<a href="assets/images/p5-5.jpg" class="portfolio-item--content simple-ajax-popup">
+						<a href="https://github.com/Suraj-Bansal/polyp-detection-model-" target="_blank">
 							<div class="portfolio-item--img b-box">
-								<img src="assets/images/p5-5.jpg" class="img-fluid mx-auto" alt="work-img">
+								<img src="assets/images/polypscnn.jpg" class="img-fluid mx-auto" alt="work-img">
 							</div>
 							<div class="portfolio-item--desc d-flex justify-content-center align-items-center">
 								<div class="portfolio-item--desc-in">
-									<h3 class="mb-2 text-white">The wall</h3>
-									<p class="text-white">Slideshow</p>
+									<h3 class="mb-2 text-white">POLYP DETECTION MODEL</h3>
 								</div>
 							</div>
 						</a>
 					</div>
 
 					<div class="portfolio-item swiper-slide image" data-groups="all image">
-						<a href="assets/images/p6-6.jpg" class="portfolio-item--content simple-ajax-popup">
+						<a href="https://drive.google.com/file/d/10nBSPSkaKlkVn7yOUCLjWkNUwt6DJEsD/view?usp=sharing" target="_blank">
 							<div class="portfolio-item--img b-box">
-								<img src="assets/images/p6-6.jpg" class="img-fluid mx-auto" alt="work-img">
+								<img src="assets/images/swl.jpg" class="img-fluid mx-auto" alt="work-img">
 							</div>
 							<div class="portfolio-item--desc d-flex justify-content-center align-items-center">
 								<div class="portfolio-item--desc-in">
-									<h3 class="mb-2 text-white">The wall</h3>
-									<p class="text-white">Slideshow</p>
-								</div>
-							</div>
-						</a>
-					</div>
-
-					<div class="portfolio-item swiper-slide video" data-groups="all video">
-						<a href="assets/images/p7-7.jpg" class="portfolio-item--content simple-ajax-popup">
-							<div class="portfolio-item--img b-box">
-								<img src="assets/images/p7-7.jpg" class="img-fluid mx-auto" alt="work-img">
-							</div>
-							<div class="portfolio-item--desc d-flex justify-content-center align-items-center">
-								<div class="portfolio-item--desc-in">
-									<h3 class="mb-2 text-white">The wall</h3>
-									<p class="text-white">Slideshow</p>
-								</div>
-							</div>
-						</a>
-					</div>
-
-					<div class="portfolio-item swiper-slide  slideshow" data-groups="all slideshow">
-						<a href="assets/images/p8-8.jpg" class="portfolio-item--content simple-ajax-popup">
-							<div class="portfolio-item--img b-box">
-								<img src="assets/images/p8-8.jpg" class="img-fluid mx-auto" alt="work-img">
-							</div>
-							<div class="portfolio-item--desc d-flex justify-content-center align-items-center">
-								<div class="portfolio-item--desc-in">
-									<h3 class="mb-2 text-white">The wall</h3>
-									<p class="text-white">Slideshow</p>
-								</div>
-							</div>
-						</a>
-					</div>
-
-					<div class="portfolio-item swiper-slide image" data-groups="all image">
-						<a href="assets/images/p9-9.jpg" class="portfolio-item--content simple-ajax-popup">
-							<div class="portfolio-item--img b-box">
-								<img src="assets/images/p9-9.jpg" class="img-fluid mx-auto" alt="work-img">
-							</div>
-							<div class="portfolio-item--desc d-flex justify-content-center align-items-center">
-								<div class="portfolio-item--desc-in">
-									<h3 class="mb-2 text-white">The wall</h3>
-									<p class="text-white">Slideshow</p>
+									<h3 class="mb-2 text-white">SIDEWALK LABS CONSULTING RECOMMENDATION</h3>
 								</div>
 							</div>
 						</a>
@@ -290,7 +204,7 @@
 				</div>
 			</div>
 		</section>
-		<!--END: WORK -->
+		<!--END: PROJECTS -->
 
 		<!-- START: CTA -->
 		<section class="section  section-freelance section-light text-center" style="background-image:url(assets/images/microphone.jpg)">
@@ -309,8 +223,8 @@
 		</section>
 		<!-- END: CTA -->
 
-		<!-- START: BLOG -->
-		<section class="section section-light section-blog" id="blog">
+		<!-- START: CONTENT -->
+		<section class="section section-light section-blog" id="content">
 			<div class="container">   
 				<div class="section-head">
 					<span>CONTENT</span>
@@ -450,7 +364,7 @@
 				</div>
 			</div>
 		</section>
-		<!-- END: BLOG -->
+		<!-- END: CONTENT -->
 
 		<!-- START: CONTACT -->
 		<section class="section section-dark section-contact" id="contact">
@@ -471,19 +385,19 @@
 					<div class="col-3">
 						<h3><strong>| Learn more</strong></h3>
 						<p>
-							<a href="assets/resume/SurajResume.pdf" target="_blank"><strong>Resume</strong></a> <br>
-							<a href="https://www.linkedin.com/in/suraj-bansal/" target="_blank"><strong>LinkedIn</strong></a> <br>
-							<a href="https://tks.life/profile/suraj.bansal" target="_blank"><strong>Portfolio</strong></a> <br>
-							<a href="https://github.com/Suraj-Bansal" target="_blank"><strong>Github</strong></a> <br>
-							<a href="https://medium.com/@bansalsuraj03" target="_blank"><strong>Medium</strong></a> <br>
-							<a href="https://www.youtube.com/channel/UCxDCH862Hve_R8O47qK2WbA?view_as=subscriber" target="_blank"><strong>Youtube</strong></a> <br>
+							<a href="assets/resume/SurajResume.pdf" class="text-black-50"target="_blank"><strong>Resume</strong></a> <br>
+							<a href="https://www.linkedin.com/in/suraj-bansal/" class="text-black-50" target="_blank"><strong>LinkedIn</strong></a> <br>
+							<a href="https://tks.life/profile/suraj.bansal" class="text-black-50" target="_blank"><strong>Portfolio</strong></a> <br>
+							<a href="https://github.com/Suraj-Bansal" class="text-black-50" target="_blank"><strong>Github</strong></a> <br>
+							<a href="https://medium.com/@bansalsuraj03" class="text-black-50" target="_blank"><strong>Medium</strong></a> <br>
+							<a href="https://www.youtube.com/channel/UCxDCH862Hve_R8O47qK2WbA?view_as=subscriber" class="text-black-50" target="_blank"><strong>Youtube</strong></a> <br>
 						</p>
 						
 					</div>
 					<div class="col-3">
 						<h3><strong>| Contact me now</strong></h3>
-						<a href="mailto:bansalsuraj03@gmail.com">bansalsuraj03@gmail.com</a> <br>
-						<a href="tel:6476688108">+1 647 668 8108</a> <br>
+						<a href="mailto:bansalsuraj03@gmail.com" class="text-black-50">bansalsuraj03@gmail.com</a> <br>
+						<a href="tel:6476688108" class="text-black-50">+1 647 668 8108</a> <br>
 					</div>
 				</div>
 			</div>
