updated personal portfolio

--- a/finalindex.html
+++ b/finalindex.html
@@ -45,7 +45,7 @@
 				<div class="collapse navbar-collapse" id="navbarToggler">
 					<ul class="navbar-nav ml-auto">
 						<li><a class="nav-link active" href="#home">HOME</a></li>
-						<li><a class="nav-link" href="#resume">EXPERTISES</a></li>
+						<li><a class="nav-link" href="#portfolio">PORTFOLIO</a></li>
 						<li><a class="nav-link" href="#projects">PROJECTS</a></li>
 						<li><a class="nav-link" href="#content">CONTENT</a></li>
 						<li><a class="nav-link" href="#contact">CONTACT</a></li>
@@ -78,7 +78,7 @@
 						<div class="about-desc">
 							<div class="about-desc-content">
 								<h2>ABOUT <strong>SURAJ—</strong></h2>
-								<p class="mt-4 font-weight-light">Hey there! I'm 16 and super passionate about interdisciplinary approaches to machine learning and healthcare. I'm enthusiastic about leveraging artificial intelligence to revolutionize global healthcare inefficiencies!</p>
+								<p class="mt-4 font-weight-light">Hey there! I'm 16 and really interested in software and machine learning development! I've always been passionate about creating interdisciplinary approaches to innovation and healthcare. My recent work involves polyp detection models with convolutional neural networks and predicting driver intent with recurrent-neural networks and YOLO object detection. Let's talk more!</p>
 							</div>
 							<ul class="about-desc-social mt-4 list-unstyled list-inline">
 		                        <li class="list-inline-item"><a href="https://github.com/Suraj-Bansal" target="_blank"><i class="fab fa-github"></i></a></li>
@@ -99,11 +99,10 @@
 		<!-- END: ABOUT -->
 
 		<!-- START: RESUME -->
-		<section class="section section-dark section-resume" id="resume">
+		<section class="section section-dark section-resume" id="portfolio">
 			<div class="container">
 				<div class="section-head">
-					<span>My Resume</span>
-					<h2>My Expertises</h2>
+					<h2>PORTFOLIO</h2>
 				</div>
 
 				<div class="row mt-7">
@@ -113,7 +112,7 @@
 							<div>
 								<h5>Research Assistant</h5>
 								<h6 class="badge badge-dark d-inline-block my-3">June 2019 | St. Michaels Research Centre</h6>
-								<p>Assisted with research constructing virtual reality polypectomy simulations for UoFT gastroenterology residents </p>
+								<p>Assisted with research constructing virtual reality polypectomy simulations for UoFT gastroenterology residents. </p>
 							</div>
 						</div>
 						<div class="resume-list b-box hover-state p-4 mt-4 wow fadeInUp" data-wow-duration="1.5s" data-wow-delay=".2s">
@@ -131,14 +130,14 @@
 							<div>
 								<h5>Bayview Secondary School</h5>
 								<h6 class="badge badge-dark d-inline-block my-3">2017-Present</h6>
-								<p>International Baccalaureate Diploma and honours student with 95% average. </p>
+								<p>International Baccalaureate Diploma and honours student with 4.0 GPA. </p>
 							</div>
 						</div>
 						<div class="resume-list b-box hover-state p-4 mt-4 wow fadeInUp" data-wow-duration="1.5s" data-wow-delay=".2s">
 							<div>
 								<h5>The Knowledge Society</h5>
 								<h6 class="badge badge-dark d-inline-block my-3">2019-Present</h6>
-								<p>Canada's leading human accelerator emulating education model of MIT, Stanford and Harvard and building students entrepreneurshipand innovation competencies. </p>
+								<p>Canada's leading human accelerator emulating education model of MIT, Stanford and Harvard and building students entrepreneurship and innovation competencies. </p>
 							</div>
 						</div>
 					</div>
@@ -152,7 +151,6 @@
 		<section class="section section-work" id="projects">
 			<div class="container">
 				<div class="section-head text-center">
-					<span>Portfolio</span>
 					<h2>My Work and Projects</h2>
 				</div>
 			</div>
@@ -160,7 +158,7 @@
 				<div class=" swiper-wrapper">
 
 					<div class="portfolio-item swiper-slide  slideshow" data-groups="all slideshow">
-						<a href="https://github.com/Suraj-Bansal/CIFAR10-Classification" target="_blank">
+						<a href="https://github.com/Suraj-Bansal/CIFAR10-Classification" target="_blank" class="portfolio-item--content">
 							<div class="portfolio-item--img b-box">
 								<img src="assets/images/cifar.jpg" class="img-fluid mx-auto" alt="work-img">
 							</div>
@@ -173,7 +171,7 @@
 					</div>
 
 					<div class="portfolio-item swiper-slide  slideshow" data-groups="all slideshow">
-						<a href="https://github.com/Suraj-Bansal/polyp-detection-model-" target="_blank">
+						<a href="https://github.com/Suraj-Bansal/polyp-detection-model-" target="_blank" class="portfolio-item--content">
 							<div class="portfolio-item--img b-box">
 								<img src="assets/images/polypscnn.jpg" class="img-fluid mx-auto" alt="work-img">
 							</div>
@@ -186,7 +184,7 @@
 					</div>
 
 					<div class="portfolio-item swiper-slide image" data-groups="all image">
-						<a href="https://drive.google.com/file/d/10nBSPSkaKlkVn7yOUCLjWkNUwt6DJEsD/view?usp=sharing" target="_blank">
+						<a href="https://drive.google.com/file/d/10nBSPSkaKlkVn7yOUCLjWkNUwt6DJEsD/view?usp=sharing" target="_blank" class="portfolio-item--content">
 							<div class="portfolio-item--img b-box">
 								<img src="assets/images/sidewalklabs.jpg" class="img-fluid mx-auto" alt="work-img">
 							</div>
@@ -227,7 +225,6 @@
 		<section class="section section-light section-blog" id="content">
 			<div class="container">   
 				<div class="section-head">
-					<span>CONTENT</span>
 					<h2>MY ARTICLES AND VIDEOS</h2>
 				</div>                 
 				<div class="mt-5">
@@ -248,7 +245,7 @@
 									<span class="d-block text-center mt-3 font-weight-bold blog-cat">Artificial Intelligence</span>
 								</div>
 							</a>				
-							<a href="https://medium.com/@bansalsuraj03/breaking-news-crispr-cas-9-cures-16-year-old-boys-caffeine-addiction-775e02658c8d" class="swiper-slide blog-list b-box hover-state d-block mb-4">
+							<a href="https://medium.com/@bansalsuraj03/breaking-news-crispr-cas-9-cures-16-year-old-boys-caffeine-addiction-775e02658c8d" target="_blank" class="swiper-slide blog-list b-box hover-state d-block mb-4">
 								<div class="blog-list--img wow fadeIn" data-wow-duration="1.5s" data-wow-delay=".2s">
 									<img src="assets/images/coffeegenomics.jpg" alt="Blog Image" class="img-fluid">
 									<div class="blog-list--details d-flex justify-content-center align-items-center">
@@ -334,7 +331,7 @@
 									</div>
 								</div>
 								<div class="blog-list--desc p-3">
-									<p>Introduction to Machine Learning</p>
+									<p>Introduction to Machine Learning Algorithms</p>
 									<span class="d-block text-center mt-3 font-weight-bold blog-cat">Artificial Intelligence</span>
 								</div>
 							</a>
@@ -358,7 +355,7 @@
 						<div class="swiper-progressbar"></div>
 						
 						<div class="blog-viewmore text-center pb-5">
-							<a href="https://tks.life/profile/suraj.bansal" target="_blank" class="mt-5 btn hover-state">Show Some More!</a>
+							<a href="https://tks.life/profile/suraj.bansal" target="_blank" class="mt-5 btn hover-state">FULL PORTFOLIO!</a>
 						</div>
 					</div>
 				</div>
@@ -371,33 +368,33 @@
 			<div class="fullwidth">
 				<div id="fixedFooter">
 					<div class="col-6">
-						<h3><strong>| Give me a summary</strong></h3>
+						<h3><strong>| Give Me A Summary</strong></h3>
 						<p>
-							Hey there! My name is Suraj Bansal and I'm extremely passionate about machine learning and healthcare!<br>
+							Hey there! My name is Suraj Bansal and I'm super interested in leveraging machine learning technology to solve global healthcare inefficiencies!<br>
 						</P>
 						<p>
-							I'm currently working with recurrent neural networks, and YOLO object detection to predict driver intent for autonomous vehicles!<br>
+							This involves projects with polyp detection, driver intent for autonomous vehicle development and consulting initiatives for Sidewalk Labs.<br>
 						</p>
 						<p>
-							I'm constantly looking for growth opportunities in software or full-stack development- reach out anytime!<br>
+							I'm currently seeking growth opportunities in software development for healthcare innovation- reach out anytime!<br>
 						</p>
 					</div>
 					<div class="col-3">
-						<h3><strong>| Learn more</strong></h3>
+						<h3><strong>| Learn More</strong></h3>
 						<p>
-							<a href="assets/resume/SurajResume.pdf" class="text-black-50"target="_blank"><strong>Resume</strong></a> <br>
-							<a href="https://www.linkedin.com/in/suraj-bansal/" class="text-black-50" target="_blank"><strong>LinkedIn</strong></a> <br>
-							<a href="https://tks.life/profile/suraj.bansal" class="text-black-50" target="_blank"><strong>Portfolio</strong></a> <br>
-							<a href="https://github.com/Suraj-Bansal" class="text-black-50" target="_blank"><strong>Github</strong></a> <br>
-							<a href="https://medium.com/@bansalsuraj03" class="text-black-50" target="_blank"><strong>Medium</strong></a> <br>
-							<a href="https://www.youtube.com/channel/UCxDCH862Hve_R8O47qK2WbA?view_as=subscriber" class="text-black-50" target="_blank"><strong>Youtube</strong></a> <br>
+							<a href="assets/resume/SurajResume.pdf" class="text-black-50"target="_blank"><strong>Resume —</strong></a> <br>
+							<a href="https://www.linkedin.com/in/suraj-bansal/" class="text-black-50" target="_blank"><strong>LinkedIn —</strong></a> <br>
+							<a href="https://tks.life/profile/suraj.bansal" class="text-black-50" target="_blank"><strong>Portfolio —</strong></a> <br>
+							<a href="https://github.com/Suraj-Bansal" class="text-black-50" target="_blank"><strong>Github —</strong></a> <br>
+							<a href="https://medium.com/@bansalsuraj03" class="text-black-50" target="_blank"><strong>Medium —</strong></a> <br>
+							<a href="https://www.youtube.com/channel/UCxDCH862Hve_R8O47qK2WbA?view_as=subscriber" class="text-black-50" target="_blank"><strong>Youtube —</strong></a> <br>
 						</p>
 						
 					</div>
 					<div class="col-3">
-						<h3><strong>| Contact me now</strong></h3>
+						<h3><strong>| Contact Me Now</strong></h3>
 						<a href="mailto:bansalsuraj03@gmail.com" class="text-black-50">bansalsuraj03@gmail.com</a> <br>
-						<a href="tel:6476688108" class="text-black-50">+1 647 668 8108</a> <br>
+						<a class="text-black-50">Phone Number and Calendly Available Upon Request</a> <br>
 					</div>
 				</div>
 			</div>
