--- a/index.html
+++ b/index.html
@@ -205,7 +205,7 @@
 		<!--END: PROJECTS -->
 
 		<!-- START: CTA -->
-		<section class="section  section-freelance section-light text-center" style="background-image:url(assets/images/microphone.jpg)">
+		<section class="section  section-freelance section-light text-center" style="background-image:url(assets/images/microphone.JPG)">
 			<div class="container">
 				<div class="row">
 					<div class="col-lg-12">
