--- a/index.html
+++ b/index.html
@@ -9,6 +9,8 @@
 	<meta name="author" content="Suraj Bansal" />
 	<meta name="theme-color" content="#2a2d35">
 
+	<link rel= "icon" href ="assets/images/favicon.png">
+
 	<!-- Vendor Css-->
 	<link rel="stylesheet" href="assets/css/vendor.css" />	
 
@@ -112,7 +114,7 @@
 							<div>
 								<h5>Research Assistant</h5>
 								<h6 class="badge badge-dark d-inline-block my-3">June 2019 | St. Michaels Research Centre</h6>
-								<p>Assisted with research constructing virtual reality polypectomy simulations for UoFT gastroenterology residents. </p>
+								<p>Assisted with research constructing virtual reality polypectomy simulations for UofT gastroenterology residents. </p>
 							</div>
 						</div>
 						<div class="resume-list b-box hover-state p-4 mt-4 wow fadeInUp" data-wow-duration="1.5s" data-wow-delay=".2s">
@@ -137,7 +139,7 @@
 							<div>
 								<h5>The Knowledge Society</h5>
 								<h6 class="badge badge-dark d-inline-block my-3">2019-Present</h6>
-								<p>Canada's leading human accelerator emulating education model of MIT, Stanford and Harvard and building students entrepreneurship and innovation competencies. </p>
+								<p>Canada's leading human accelerator emulating education model of MIT, Stanford and Harvard and building students' entrepreneurship and innovation competencies. </p>
 							</div>
 						</div>
 					</div>
@@ -205,7 +207,7 @@
 		<!--END: PROJECTS -->
 
 		<!-- START: CTA -->
-		<section class="section  section-freelance section-light text-center" style="background-image:url(assets/images/microphone.JPG)">
+		<section class="section  section-freelance section-light text-center" style="background-image:url(assets/images/microphone.jpg)">
 			<div class="container">
 				<div class="row">
 					<div class="col-lg-12">
