--- a/index.html
+++ b/index.html
@@ -215,7 +215,7 @@
 							<h2>Let's work together!</h2>
 						</div>
 						<div class="mt-5 wow fadeInUp" data-wow-duration="1.5s" data-wow-delay=".2s">
-							<a href="assets/resume/SurajResume.pdf" target="_blank" class="btn btn-outline hover-state">MY RESUME</a>
+							<a href="assets/SurajResume.pdf" target="_blank" class="btn btn-outline hover-state">MY RESUME</a>
 						</div>
 					</div>
 				</div>
