--- a/index.html
+++ b/index.html
@@ -114,7 +114,7 @@
 							<div>
 								<h5>Research Assistant</h5>
 								<h6 class="badge badge-dark d-inline-block my-3">June 2019 | St. Michaels Research Centre</h6>
-								<p>Assisted with research constructing virtual reality polypectomy simulations for UofT gastroenterology residents. </p>
+								<p>Volunteered with research constructing virtual reality polypectomy simulations for UofT gastroenterology residents. </p>
 							</div>
 						</div>
 						<div class="resume-list b-box hover-state p-4 mt-4 wow fadeInUp" data-wow-duration="1.5s" data-wow-delay=".2s">
@@ -132,7 +132,7 @@
 							<div>
 								<h5>Bayview Secondary School</h5>
 								<h6 class="badge badge-dark d-inline-block my-3">2017-Present</h6>
-								<p>International Baccalaureate Diploma and honours student with 4.0 GPA. </p>
+								<p>International Baccalaureate Diploma candidate and honours student. </p>
 							</div>
 						</div>
 						<div class="resume-list b-box hover-state p-4 mt-4 wow fadeInUp" data-wow-duration="1.5s" data-wow-delay=".2s">
