--- a/index.html
+++ b/index.html
@@ -171,6 +171,19 @@
 							</div>
 						</a>
 					</div>
+					
+					<div class="portfolio-item swiper-slide image" data-groups="all image">
+						<a href="https://docs.google.com/presentation/d/1FkXcpDetEy6srdxMyXHygb1poLj6Ah6e0g1cobfjeuI/edit?usp=sharing" target="_blank" class="portfolio-item--content">
+							<div class="portfolio-item--img b-box">
+								<img src="assets/images/kidogochallenge.jpg" class="img-fluid mx-auto" alt="work-img">
+							</div>
+							<div class="portfolio-item--desc d-flex justify-content-center align-items-center">
+								<div class="portfolio-item--desc-in">
+									<h3 class="mb-2 text-white">KIDOGO CONSULTING RECOMMENDATION</h3>
+								</div>
+							</div>
+						</a>
+					</div>
 
 					<div class="portfolio-item swiper-slide  slideshow" data-groups="all slideshow">
 						<a href="https://github.com/Suraj-Bansal/polyp-detection-model-" target="_blank" class="portfolio-item--content">
