--- a/index.html
+++ b/index.html
@@ -173,7 +173,7 @@
 					</div>
 					
 					<div class="portfolio-item swiper-slide image" data-groups="all image">
-						<a href="https://docs.google.com/presentation/d/1FkXcpDetEy6srdxMyXHygb1poLj6Ah6e0g1cobfjeuI/edit?usp=sharing" target="_blank" class="portfolio-item--content">
+						<a href="assets/Kidogo.pdf" target="_blank" class="portfolio-item--content">
 							<div class="portfolio-item--img b-box">
 								<img src="assets/images/kidogochallenge.jpg" class="img-fluid mx-auto" alt="work-img">
 							</div>
